TRANSLATIONS: remove old legal pages, move to dynamic legal page

--- a/public/translations/en/GDPR.json
+++ b/public/translations/en/GDPR.json
@@ -1,14 +1,18 @@
 {
     "title": "GDPR",
-    "subtitle": "Data Protection Right",
-    "content": [
-        "I would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:",
-        "<strong>The right to access</strong> – You have the right to request copies of your data. I do not store any data, I'm happy to share any data from Google analytics collected if needed, no personal data is stored on this website.",
-        "<strong>The right to rectification</strong> – You have the right to request that I correct any information you believe is inaccurate. You also have the right to request that I complete the information you believe is incomplete.",
-        "<strong>The right to erasure</strong> – You have the right to request that any website erase your data, under certain conditions. I don't store any personal data.",
-        "<strong>The right to restrict processing</strong> – You have the right to request that I restrict the processing of your data, under certain conditions. I don't store any personal data to be processed.",
-        "<strong>The right to object to processing</strong> – You have the right to object to my processing of your data, under certain conditions. I don't store any personal data.",
-        "<strong>The right to data portability</strong> – You have the right to request that I transfer the data that I have collected to another organization, or directly to you, under certain conditions. I'm happy to share any data from Google analytics collected if needed, no personal data is stored on this website.",
-        "If you make a request, I have one month to respond to you. If you would like to exercise any of these rights, please contact me at <a href='mailto:luis.krotz@gmail.com'>luis.krotz@gmail.com</a>"
+    "sections": [
+        {
+            "title": "Data Protection Right",
+            "content": [
+                "I would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:",
+                "<strong>The right to access</strong> – You have the right to request copies of your data. I do not store any data, I'm happy to share any data from Google analytics collected if needed, no personal data is stored on this website.",
+                "<strong>The right to rectification</strong> – You have the right to request that I correct any information you believe is inaccurate. You also have the right to request that I complete the information you believe is incomplete.",
+                "<strong>The right to erasure</strong> – You have the right to request that any website erase your data, under certain conditions. I don't store any personal data.",
+                "<strong>The right to restrict processing</strong> – You have the right to request that I restrict the processing of your data, under certain conditions. I don't store any personal data to be processed.",
+                "<strong>The right to object to processing</strong> – You have the right to object to my processing of your data, under certain conditions. I don't store any personal data.",
+                "<strong>The right to data portability</strong> – You have the right to request that I transfer the data that I have collected to another organization, or directly to you, under certain conditions. I'm happy to share any data from Google analytics collected if needed, no personal data is stored on this website.",
+                "If you make a request, I have one month to respond to you. If you would like to exercise any of these rights, please contact me at <a href='mailto:luis.krotz@gmail.com'>luis.krotz@gmail.com</a>"
+            ]
+        }
     ]
 }
