--- a/public/translations/en/projects/metcha.json
+++ b/public/translations/en/projects/metcha.json
@@ -132,6 +132,7 @@
                     "source": "metcha/feed/metcha.com-2020-2021-website-tour",
                     "width": 1924,
                     "height": 928,
+                    "canExpand": true,
                     "isVideo": true,
                     "label": "METCHA -feed 2020/2021 tour"
                 },
