TRANSLATIONS: add new translations, update routes

--- a/public/translations/en/components/related.json
+++ b/public/translations/en/components/related.json
@@ -3,8 +3,8 @@
     "path": "/portfolio/",
     "projects": [
         {
-            "link": "Metcha",
-            "page": "metcha"
+            "link": "metcha",
+            "page": "Metcha"
         },
         {
             "link": "transa",
