--- a/public/translations/en/projects/metcha.json
+++ b/public/translations/en/projects/metcha.json
@@ -564,7 +564,9 @@
             ]
         ],
         [
-            ["All those articles and many more, are powered by a powerful CMS, developed by Renan Machado, and with the front end customized by myself for the team at Transa."],
+            [
+                "All those articles and many more, are powered by a powerful CMS, developed by Renan Machado, and with the front end customized by myself for the team at Transa."
+            ],
             [
                 {
                     "source": "metcha/cms/metcha.com-cms-metcha-posts-6-editar-feed",
@@ -779,7 +781,9 @@
                     "label": "METCHA GIPHY:4.6 milion views in less than a month at giphy"
                 }
             ],
-            ["Also, focusing on METCHA's project being carbon neutral and sustainable. With the use of modern content and code delivery techniques, like using green distributed networks like Cloudflare and splitting the code into smaller chunks with progressive load to serve only the code needed by the UI in real-time, while maintaining a 100% semantic HTML structure for accessibility and SEO."],
+            [
+                "Also, focusing on METCHA's project being carbon neutral and sustainable. With the use of modern content and code delivery techniques, like using green distributed networks like Cloudflare and splitting the code into smaller chunks with progressive load to serve only the code needed by the UI in real-time, while maintaining a 100% semantic HTML structure for accessibility and SEO."
+            ],
             [
                 {
                     "source": "metcha/features/metcha-features-carbon-neutral-status-in-april-of-2022",
