--- a/public/translations/en/projects/vibra.json
+++ b/public/translations/en/projects/vibra.json
@@ -1,13 +1,45 @@
 {
-    "title": "",
+    "title": "Vibra",
     "cover": {
-        "source": "",
-        "width": 3840,
-        "height": 2160,
+        "src": "vibra/vibra.com.br-a-empresa-mais-inovadora-do-segmento-no-brasil-tour",
+        "width": 1438,
+        "height": 784,
         "isVideo": true,
-        "label": ""
+        "label": "Vibra:A empresa mais inovadora do segmento no brasil / tour"
     },
     "sections": [
-        
+        [
+            [
+                "Vibra was a website developed at <a href='https://transainc.com?utm_source=luiskr.com' target='_blank'>Transa</a> in 2016, and this version stayed online until 2021.", "Vibra's project was the first project I participated in at Transa, guided by Cristiano Becker, with the help of Renan Machado.", "Vibra's project is a portal developed for the Vibra Brand.", "It was developed in node.js, CSS, Javascript and Html, with a pixel perfect layout and many SVG's created programmatically to demonstrate the brand's processes."
+            ],
+            [
+                {
+                    "src": "vibra/https-www.vibra.com.br-mobile",
+                    "width": 832,
+                    "height": 1728,
+                    "canExpand": true,
+                    ":isVideo": true,
+                    "label": "Vibra:A empresa mais inovadora do segmento no brasil /tour mobile"
+                }, {
+                    "src": "vibra/vibra.com.br-a-empresa-mais-inovadora-do-segmento-no-brasil-production-and-distributuon-business-full-page",
+                    "width": 1920,
+                    "height": 2695,
+                    "canExpand": true,
+                    "label": "Vibra:A empresa mais inovadora do segmento no brasil/ production and distributuon business full page"
+                }, {
+                    "src": "vibra/vibra.com.br-a-empresa-mais-inovadora-do-segmento-no-brasil-our-brands-full-page",
+                    "width": 1920,
+                    "height": 32491,
+                    "canExpand": true,
+                    "label": "Vibra:A empresa mais inovadora do segmento no brasil /our brands full page"
+                }, {
+                    "src": "vibra/vibra.com.br-a-empresa-mais-inovadora-do-segmento-no-brasil-more-than-five-decades-of-experience-and-tradition-in-aviculture-about-us-full-page",
+                    "width": 1920,
+                    "height": 7244,
+                    "canExpand": true,
+                    "label": "Vibra:A empresa mais inovadora do segmento no brasil - more than five decades of experience and tradition in aviculture / About us full page"
+                }
+            ]
+        ]
     ]
 }
