--- a/public/translations/en/projects/cecerele.json
+++ b/public/translations/en/projects/cecerele.json
@@ -1,7 +1,7 @@
 {
     "title": "Cecerelê",
     "cover": {
-        "source": "cecerele/cecerele-tour",
+        "src": "cecerele/cecerele-tour",
         "width": 3836,
         "height": 2056,
         "isVideo": true,
@@ -15,14 +15,14 @@
             [
                 {
                     "class": "landscape",
-                    "source": "cecerele/cecerele-br-home-update",
+                    "src": "cecerele/cecerele-br-home-update",
                     "width": 3840,
                     "height": 2368,
                     "canExpand": true,
                     "isVideo": false,
                     "label": "Cecerelê:homepage with products updated on dec. 2021"
                 }, {
-                    "source": "cecerele/cecerele-br-sobre-nos",
+                    "src": "cecerele/cecerele-br-sobre-nos",
                     "width": 1920,
                     "height": 5654,
                     "canExpand": true,
@@ -37,7 +37,7 @@
             ],
             [
                 {
-                    "source": "cecerele/cecerele-br-pd-8e2da8-kit-para-colorir-adulto-edicao-limitada",
+                    "src": "cecerele/cecerele-br-pd-8e2da8-kit-para-colorir-adulto-edicao-limitada",
                     "width": 1170,
                     "height": 1863,
                     "canExpand": true,
@@ -45,7 +45,7 @@
                     "label": "Cecerelê:-product page"
                 },
                 {
-                    "source": "cecerele/cecerele-br-pd-8e3765-kit-para-colorir-infantil-edicao-limitada",
+                    "src": "cecerele/cecerele-br-pd-8e3765-kit-para-colorir-infantil-edicao-limitada",
                     "width": 1280,
                     "height": 1815,
                     "canExpand": true,
@@ -53,7 +53,7 @@
                     "label": "Cecerelê:kit para colorir adulto edição limitada - product page"
                 },
                 {
-                    "source": "cecerele/cecerele-br-memorelas-jogo-de-memoria-das-mulheres-brasileiras",
+                    "src": "cecerele/cecerele-br-memorelas-jogo-de-memoria-das-mulheres-brasileiras",
                     "width": 1920,
                     "height": 2002,
                     "canExpand": true,
@@ -61,14 +61,14 @@
                     "label": "Cecerelê:Memorêlas jogo de memória das mulheres brasileiras - product page"
                 },
                 {
-                    "source": "cecerele/cecerele-br-minha-praia-livro-de-colorir",
+                    "src": "cecerele/cecerele-br-minha-praia-livro-de-colorir",
                     "width": 1920,
                     "height": 1927,
                     "canExpand": true,
                     "isVideo": false,
                     "label": "Cecerelê:Minha praia, livro de colorir - product page"
                 }, {
-                    "source": "cecerele/cecerele-br-quebra-cabeca-revolucionarias",
+                    "src": "cecerele/cecerele-br-quebra-cabeca-revolucionarias",
                     "width": 1920,
                     "height": 2027,
                     "canExpand": true,
@@ -84,7 +84,7 @@
             [
                 {
                     "class": "landscape",
-                    "source": "cecerele/cecerele-br-cart-content",
+                    "src": "cecerele/cecerele-br-cart-content",
                     "width": 1920,
                     "height": 1476,
                     "canExpand": true,
@@ -92,14 +92,14 @@
                     "label": "Cecerelê:Cart Content"
                 }, {
                     "class": "landscape",
-                    "source": "cecerele/cecerele-br-login",
+                    "src": "cecerele/cecerele-br-login",
                     "width": 1920,
                     "height": 1295,
                     "canExpand": true,
                     "isVideo": false,
                     "label": "Cecerelê:Login"
                 }, {
-                    "source": "cecerele/cecerele-br-cart-client-address",
+                    "src": "cecerele/cecerele-br-cart-client-address",
                     "width": 1920,
                     "height": 1476,
                     "canExpand": true,
