--- a/public/translations/en/projects/cicb.json
+++ b/public/translations/en/projects/cicb.json
@@ -1,7 +1,7 @@
 {
     "title": "Brazilian Leather",
     "cover": {
-        "source": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-full-tour",
+        "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-full-tour",
         "width": 1462,
         "height": 784,
         "isVideo": true,
@@ -18,7 +18,7 @@
             ],
             [
                 {
-                    "source": "brazilian leather/portal/cicb.org.br-31-03-19-1-mobile",
+                    "src": "brazilian leather/portal/cicb.org.br-31-03-19-1-mobile",
                     "width": 833,
                     "height": 1728,
                     "canExpand": true,
@@ -26,27 +26,27 @@
                     "label": "Brazilian Leather - mobile tour"
                 },
                 {
-                    "source": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page-en-2020-12-15-23_21_33",
+                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page-en-2020-12-15-23_21_33",
                     "width": 1920,
                     "height": 12721,
                     "canExpand": true,
                     "label": "Brazilian Leather - home"
                 },
                 {
-                    "source": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page",
+                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-about-full-page",
                     "width": 1920,
                     "height": 10257,
                     "canExpand": true,
                     "label": "Brazilian Leather - about"
                 },
                 {
-                    "source": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-brazilian-leather-mandarin-chinese-full-page",
+                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-brazilian-leather-mandarin-chinese-full-page",
                     "width": 1920,
                     "height": 7451,
                     "canExpand": true,
                     "label": "Brazilian Leather - in Mandarin Chinese"
                 }, {
-                    "source": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-cicb-website-full-page",
+                    "src": "brazilian leather/portal/brazilian-leather-cicb-cscb-leather-law-portal-cicb-website-full-page",
                     "width": 1920,
                     "height": 11726,
                     "canExpand": true,
@@ -65,20 +65,20 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-tour",
+                    "src": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-tour",
                     "width": 1455,
                     "height": 768,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2016 - Full tour"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-full-page",
+                    "src": "brazilian leather/forum-cicb/2016/fórum-cscb-fórum-2016-economia-circular-full-page",
                     "width": 1920,
                     "height": 6219,
                     "canExpand": true,
                     "label": "Fórum 2016 - Full page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2016/forum-2016-1-mobile",
+                    "src": "brazilian leather/forum-cicb/2016/forum-2016-1-mobile",
                     "width": 831,
                     "height": 1712,
                     "canExpand": true,
@@ -94,20 +94,20 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-tour",
+                    "src": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-tour",
                     "width": 1458,
                     "height": 768,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2017 - Full tour"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-full-page",
+                    "src": "brazilian leather/forum-cicb/2017/fórum-cscb-fórum-2017-negócios-disruptivos-para-um-mundo-disruptivo-full-page",
                     "width": 1920,
                     "height": 9774,
                     "canExpand": true,
                     "label": "Fórum 2017 - Full page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2017/forum-2017-1-mobile",
+                    "src": "brazilian leather/forum-cicb/2017/forum-2017-1-mobile",
                     "width": 834,
                     "height": 1728,
                     "canExpand": true,
@@ -123,20 +123,20 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-tour",
+                    "src": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-tour",
                     "width": 1458,
                     "height": 768,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2018 - Full tour"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-full-page",
+                    "src": "brazilian leather/forum-cicb/2018/fórum-cscb-fórum-2018-qual-o-retorno-do-investimento-sustentável-full-page",
                     "width": 1920,
                     "height": 5600,
                     "canExpand": true,
                     "label": "Fórum 2018 - Full page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2018/forum-2018-1-mobile",
+                    "src": "brazilian leather/forum-cicb/2018/forum-2018-1-mobile",
                     "width": 828,
                     "height": 1712,
                     "canExpand": true,
@@ -152,20 +152,20 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-tour",
+                    "src": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-tour",
                     "width": 1441,
                     "height": 784,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2019 - Full tour"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-full-page",
+                    "src": "brazilian leather/forum-cicb/2019/fórum-cscb-fórum-2019-o-couro-no-mundo-hiperconectado-full-page",
                     "width": 1920,
                     "height": 5063,
                     "canExpand": true,
                     "label": "Fórum 2019 - Full page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2019/forumcicb2019-mobile",
+                    "src": "brazilian leather/forum-cicb/2019/forumcicb2019-mobile",
                     "width": 834,
                     "height": 1728,
                     "canExpand": true,
@@ -181,7 +181,7 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2020/cicb.org.br-forum2020",
+                    "src": "brazilian leather/forum-cicb/2020/cicb.org.br-forum2020",
                     "width": 1464,
                     "height": 784,
                     "canExpand": true,
@@ -189,14 +189,14 @@
                     "label": "Fórum 2020 - Full tour"
                 },
                 {
-                    "source": "brazilian leather/forum-cicb/2020/fórum-cscb-fórum-2020-a-sociedade-somos-todos-nós-full-page",
+                    "src": "brazilian leather/forum-cicb/2020/fórum-cscb-fórum-2020-a-sociedade-somos-todos-nós-full-page",
                     "width": 1920,
                     "height": 6309,
                     "canExpand": true,
                     "label": "Fórum 2020 - Full page"
                 },
                 {
-                    "source": "brazilian leather/forum-cicb/2020/forum-cscb-2020-mobile-mobile",
+                    "src": "brazilian leather/forum-cicb/2020/forum-cscb-2020-mobile-mobile",
                     "width": 831,
                     "height": 1712,
                     "canExpand": true,
@@ -205,20 +205,20 @@
                 },
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-tour",
+                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-tour",
                     "width": 1920,
                     "height": 928,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Webinar 2020 - Full tour"
                 }, {
-                    "source": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-full-page",
+                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-full-page",
                     "width": 1920,
                     "height": 19246,
                     "canExpand": true,
                     "label": "Fórum 2020 - Full page"
                 }, {
-                    "source": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-mobile-mobile",
+                    "src": "brazilian leather/webinar-series/2020/brazilian-leather-webinar-series-2020-leather-business-and-future-consumer-the-world-is-changing-we-are-changing-join-us-in-shaping-the-future-to-come-mobile-mobile",
                     "width": 828,
                     "height": 1712,
                     "canExpand": true,
@@ -234,26 +234,26 @@
             [
                 {
                     "class": "landscape",
-                    "source": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tour",
+                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tour",
                     "width": 1464,
                     "height": 784,
                     "canExpand": true,
                     "isVideo": true,
                     "label": "Fórum 2021 - Full tour"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2021/forum-cicb-2021-desk",
+                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-desk",
                     "width": 1920,
                     "height": 5020,
                     "canExpand": true,
                     "label": "Fórum 2020 - Desktop page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tablet",
+                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-tablet",
                     "width": 768,
                     "height": 4563,
                     "canExpand": true,
                     "label": "Fórum 2020 - Tablet page"
                 }, {
-                    "source": "brazilian leather/forum-cicb/2021/forum-cicb-2021-mobile",
+                    "src": "brazilian leather/forum-cicb/2021/forum-cicb-2021-mobile",
                     "width": 320,
                     "height": 4563,
                     "canExpand": true,
